--- a/public/About/index.html
+++ b/public/About/index.html
@@ -140,6 +140,19 @@
 <aside class="sidebar">
   
     <section>
+<h1>About Me</h1>
+  <img src='http://www.gravatar.com/avatar/e77e4b46a99c10734e9078a1fb487a7d.png' style='float: left;' />
+  <p>
+    Hi I'm Yann ARMAND.<br/>
+    Talk me about code, just code.... or food.<br/>
+    Meet me at #ruby drink meetups in #Bordeaux <a href='https://twitter.com/#!/rubybdx'>@rubybdx</a>
+  </p>
+  <p>
+    <a href='https://twitter.com/#!/yarmand'><img src='/images/follow_twitter.png' style='border: 0;'></a>
+    <a href='https://www.facebook.com/yann.armand'><img src='/images/follow_facebook.png' style='border: 0;'></a>
+  </p>
+</section>
+<section>
   <h1>Recent Posts</h1>
   <ul id="recent_posts">
     
